index.css
* {
    margin: 0%;
}
h1, p {
    font-family: 'Open Sans', sans-serif;
}
.top-bar {
    display: flex;
    background-color: rgb(26, 22, 22);
    border-bottom: 2px solid red;
    align-self: flex-start;
    height: auto;
    position: -webkit-sticky;
    position: sticky;
    overflow-x: hidden;
    top: 0;
    z-index: 2;
}
.logo-container2 {
    display: flex;
    flex-direction: row;
}
.logo-container {
    display: flex;
    flex-direction: column;
    margin-left: 10px;
    font-family: 'Open Sans', sans-serif;
    color: white;
    justify-content: center;
    margin-left: 20px;   
}
.logo {
    width: 8%;
    margin-left: 30px;
    border-radius: 50%;
    margin-top: 20px;
    margin-bottom: 20px;
    box-shadow: 2px 2px 4px whitesmoke;
}
.donate {
    text-decoration: none;
    font-family: 'Open Sans', sans-serif;
    font-weight: bolder;
    font-size: large;
    background-color: rgb(255, 0, 0);
    color: white;
    text-align: center;
    align-self: center;
    width: 40%;
    padding: 12px;
    border-radius: 5px;
    margin-right: 4%;
}
.donate:hover {
    transition: 0.5s;
    opacity: 0.7;
    border: 1px solid white;
    box-shadow: 2px 2px 3px whitesmoke;
}
.help-box {
    background-image: url(images/cat.jpg);
    background-repeat: no-repeat;
    position: relative;
    background-size: 100%;
    display: flex;
    flex-direction: column;
    font-family: 'Open Sans', sans-serif;
    height: 500px;
    box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
}
.layer {
    padding: 30px;
    margin: 70px;
    background-color: rgba(255, 255, 255, 0.7);
    position: absolute;
    top: 0;
    left: 0;
    width: 35%;
    height: 50%;
    margin-left: 750px;
    border-radius: 0.5px;
}
.layer > .donate {
   margin-left: 0%;
   position: absolute;
   width: 150px;
}
.layer h1 {
    font-weight: 48px;
    margin-bottom: 15px;
}
.layer p {
    margin-bottom: 35px;
}
.about {
    display: flex;
    flex-direction: column;
    margin-left: 300px;
    margin-right: 300px;
    margin-top: 40px;
    margin-bottom: 40px;
    text-align: center;
    font-family: 'Open Sans', sans-serif;
}
.about h1 {
    font-weight: bolder;
    margin-bottom: 30px;
}
.wdwd {
    text-align: center;
    margin-left: 25%;
    margin-right: 25%;
    margin-bottom: 20px;
}
.big-container {
    display: flex;
    flex-direction: row;
    margin-top: 50px;
}
.container {
    display: flex;
    flex-direction: column;
    font-family: 'Open Sans', sans-serif;
    text-align: center;
    margin: 7%;
}
.container img {
    width: 50%;
    align-self: center;
    margin-bottom: 10px;
}
.carousel-cell img {
    width: 30%;;
}
.footer h1 {
	font-size: 22px;
}
.footer a {
	text-decoration: none;
	color: white;
	padding: 9px;
}
.footer a:hover {
	border: 1px solid white;
	border-radius: 4px;
	background-color:rgba(255, 255, 255, 0.1);
	box-shadow: 0 0 10px 2px whitesmoke;
	transition: 0.2s;
}
#donate_footer:hover {
    border: 1px solid white;
    box-shadow: 0 0 10px 2px red;
}
.footer {
	color: white;
	display: flex;
	flex-direction: row;
	background-color: rgba(0, 0, 0, 0.9);
    font-family: 'Open Sans', sans-serif;
}
.footer-col {
	margin: 80px;
	display: flex;
	flex-direction: column;
	line-height: 50px;	
}
.smicons {
	display: flex;
	flex-direction: row;
	width: 350px;
}
.smicons a {
    border-radius: 50%;
}
.smicons img {
	padding-left: 25%;
    padding-top: 25%;
    
}
.smlinks {
	width: 50%;
}
.video-container {
    display: flex;
    flex-direction: column;
    align-content: center;
    background-color: #1a1616;
}
.video {
    margin-top: 50px;
    margin-bottom: 30px;
    align-self: center;
    width: 50%;
    height: 100%;
    object-fit: cover;
    box-shadow: 0 0 10px 10px whitesmoke;
}
.events-h1 {
	font-family: 'Helvetica', sans-serif;
	font-size: 40px;
	font-weight: 600;
	text-align: center;
	padding-top: 30px;
}
.events {
	display: flex;
	flex-direction: row;
	margin: 10px;
	padding: 40px;
	align-items: center;
	justify-content: center;
    font-family: 'Open Sans', sans-serif;
}
.events-cells h2 {
	color: black;
	text-align: center;
}
.events-cells img {
          width: 300px;
		  height: 300px;
		  margin: 25px;
		  box-shadow: 0 0 5px 5px black;
		  transition: 0.4s;
}
.events-cells h2:hover {
	color: rgb(255, 0, 0);
}
.events-cells img:hover {
	width: 315px;
	height: 315px;
	box-shadow: 0 0 20px 3px rgba(255, 0, 0, 0.801);
	border-radius: 3px;
}
.end-box {
    background-image: url(./images/poor.jpg);
    background-repeat: no-repeat;
    background-size: 100%;
    height: 600px;
    display: flex;
    flex-direction: column;
    margin-bottom: 10px;
    color: white;
}
.end-box-text {
    margin-top: 3%;
    display: flex;
    flex-direction: column;
    align-items: center;
    line-height: 60px;
    font-size: 30px;
    text-shadow: 2px 2px 4px black;
}

@media only screen and (max-width: 600px)
{
    html, body *:not(.top-bar) {
        overflow-x: hidden;
      }
    .top-bar {
        flex-direction: column;
        align-items: center;
        justify-content: center;
        padding: 10px;
    }
    .donate {
        margin-left: 0%;
        width: 35%;
    }
    .logo {
        margin-left: 0%;
        width: 14%;
    }
    .logo-container {
        text-align: left;
        margin-top: 20px;
        margin-bottom: 20px;
        font-size: smaller;
    }
    .logo-container2 {
        justify-content: center;
    }
    .layer {
        margin: 0%;
        width: 99%;
        height: 90%;
       
    }
    .layer > .donate {
        margin-top: 7%;
        margin-left: 0%;
        position: absolute;
        width: 40%;
     }
     .layer h1 {
         font-weight:bolder;
         margin-bottom: 0px;
        
     }
     .layer p {
         margin-bottom: 0px;
         margin-top: 4%;
     }
    .help-box {
        height: 270px;
    }
    .about {
        margin-left: 10%;
        margin-right: 10%;
    }
    .big-container {
        flex-direction: column;
    }
    .container img {
        width: 25%;
    }
    .container {
        margin-left:  16%;
        margin-right: 16%;
    }
    .footer{
		flex-direction: column;
	}
	.footer-col{
		align-items: center;
		margin: 0%;
		margin-top: 40px;

	}

    .layer h1 { /* for mobile */
        font-size: 18px;
        margin-bottom: 3px;
    }
    .layer p {
        margin-bottom: 5px;
        margin-right: 20px;
    }
    .video {
        width: 90%;
        height: 100%;
    }
    .events {
		flex-direction: column;
	}
    .end-box {
        height: 270px;
        align-items: center;
    }
    .end-box-text {
        font-size: small;
        line-height:normal;
        overflow: hidden;
        text-align: center;
    }
    .end-box-text a {
        margin-top: 45px;
    }
    .end-box-text h1,p {
        margin-bottom: 10px;
    }
    .wdwd {
        margin-left: 10%;
        margin-right: 10%;
    }
}
@media only screen and (min-width: 601px) and (max-width: 900px) and (orientation: landscape) {
    .layer {
        margin-left: 0px;
    }
    .about {
        margin-left: 0px;
        margin-right: 0px;
    }
    .footer-col{
        margin: 10px;
    }
    .smicons {
        width: 200px;
    }
    .end-box-text {
        text-align: center;
    }
    .end-box-text h1, p {
        margin-bottom: 15px;
    }
    .end-box-text a {
        margin-top: 150px;
        
    }
}

